// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveComponent step = 1 1`] = `
<div
  className="MuiGrid-container-3 MuiGrid-direction-xs-column-6"
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(MyStepper)
      actionType="receive"
      step={0}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      alignItems="center"
      className={false}
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        className="ReceiveComponent-subComponent-2"
        item={true}
      >
        <Connect(ReceivePasswordContainer) />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ReceiveComponent step = 2 1`] = `
<div
  className="MuiGrid-container-3 MuiGrid-direction-xs-column-6"
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(MyStepper)
      actionType="receive"
      step={1}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      alignItems="center"
      className={false}
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        className="ReceiveComponent-subComponent-2"
        item={true}
      >
        <Connect(ReceiveWalletSelectionContainer) />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ReceiveComponent step = 3 1`] = `
<div
  className="MuiGrid-container-3 MuiGrid-direction-xs-column-6"
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(MyStepper)
      actionType="receive"
      step={2}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      alignItems="center"
      className={false}
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        className="ReceiveComponent-subComponent-2"
        item={true}
      >
        <Connect(ReceiveReviewContainer) />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ReceiveComponent step = 4 1`] = `
<div
  className="MuiGrid-container-3 MuiGrid-direction-xs-column-6 ReceiveComponent-rootReceipt-1"
>
  <WithStyles(Grid)
    item={true}
  />
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        className="ReceiveComponent-subComponent-2"
        item={true}
      >
        <Connect(ReceiveReceiptContainer) />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;
